zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/tuple_in_extern_context.zig
const S = extern struct {
    f: struct { u32 },
};

comptime {
    _ = @sizeOf(S);
}

// error
//
// :2:8: error: extern structs cannot contain fields of type 'struct { u32 }'
// :2:8: note: tuples have no guaranteed in-memory representation
